--- a/Internship.Training/Web.config
+++ b/Internship.Training/Web.config
@@ -4,7 +4,12 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-  <system.web>
+	<connectionStrings>
+		<!--//development/testing/staging/production-->
+		<add name="connstr" connectionString="Data Source=ASHISH\SQLEXPRESS;Initial Catalog=DemoDB;Integrated Security=True"/>
+		
+	</connectionStrings>  
+	<system.web>
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
